// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Console className="my-classname" 1`] = `
<Pre
  className="uu5-bricks-console my-classname"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Console controlled=false 1`] = `
<Pre
  className="uu5-bricks-console"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Console controlled=true 1`] = `
<Pre
  className="uu5-bricks-console"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Console default props 1`] = `
<Pre
  className="uu5-bricks-console"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Console disabled=false 1`] = `
<Pre
  className="uu5-bricks-console"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Console disabled=true 1`] = `
<Pre
  className="uu5-bricks-console"
  disabled={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Console hidden=false 1`] = `
<Pre
  className="uu5-bricks-console"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Console hidden=true 1`] = `
<Pre
  className="uu5-bricks-console"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Console id="myId" 1`] = `
<Pre
  className="uu5-bricks-console"
  id="myId-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Console mainAttrs=undefined 1`] = `
<Pre
  className="uu5-bricks-console"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Console name="myName" 1`] = `
<Pre
  className="uu5-bricks-console"
  id="uuID-inner"
  mainAttrs={Object {}}
  name="myName-inner"
/>
`;

exports[`UU5.Bricks.Console nestingLevel="bigBox" 1`] = `
<Pre
  className="uu5-bricks-console"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBox"
/>
`;

exports[`UU5.Bricks.Console nestingLevel="bigBoxCollection" 1`] = `
<Pre
  className="uu5-bricks-console"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Console nestingLevel="box" 1`] = `
<Pre
  className="uu5-bricks-console"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="box"
/>
`;

exports[`UU5.Bricks.Console nestingLevel="boxCollection" 1`] = `
<Pre
  className="uu5-bricks-console"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="boxCollection"
/>
`;

exports[`UU5.Bricks.Console nestingLevel="container" 1`] = `
<Pre
  className="uu5-bricks-console"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="container"
/>
`;

exports[`UU5.Bricks.Console nestingLevel="inline" 1`] = `
<Pre
  className="uu5-bricks-console"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="inline"
/>
`;

exports[`UU5.Bricks.Console nestingLevel="page" 1`] = `
<Pre
  className="uu5-bricks-console"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="page"
/>
`;

exports[`UU5.Bricks.Console nestingLevel="smallBox" 1`] = `
<Pre
  className="uu5-bricks-console"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
/>
`;

exports[`UU5.Bricks.Console nestingLevel="smallBoxCollection" 1`] = `
<Pre
  className="uu5-bricks-console"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBoxCollection"
/>
`;

exports[`UU5.Bricks.Console nestingLevel="spa" 1`] = `
<Pre
  className="uu5-bricks-console"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="spa"
/>
`;

exports[`UU5.Bricks.Console noIndex=false 1`] = `
<Pre
  className="uu5-bricks-console"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Console noIndex=true 1`] = `
<Pre
  className="uu5-bricks-console uu5-noindex"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Console pureRender=false 1`] = `
<Pre
  className="uu5-bricks-console"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Console pureRender=true 1`] = `
<Pre
  className="uu5-bricks-console"
  id="uuID-inner"
  mainAttrs={Object {}}
  pureRender={true}
/>
`;

exports[`UU5.Bricks.Console selected=false 1`] = `
<Pre
  className="uu5-bricks-console"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Console selected=true 1`] = `
<Pre
  className="uu5-bricks-console"
  id="uuID-inner"
  mainAttrs={Object {}}
  selected={true}
/>
`;

exports[`UU5.Bricks.Console style="padding:8px; borderRadius: 2px" 1`] = `
<Pre
  className="uu5-bricks-console"
  id="uuID-inner"
  mainAttrs={Object {}}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
/>
`;

exports[`UU5.Bricks.Console style={"backgroundColor":"red","color":"blue"} 1`] = `
<Pre
  className="uu5-bricks-console"
  id="uuID-inner"
  mainAttrs={Object {}}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
/>
`;

exports[`UU5.Bricks.Console tooltip="My Tooltip" 1`] = `
<Pre
  className="uu5-bricks-console"
  id="uuID-inner"
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  tooltip="My Tooltip"
/>
`;
